Revise HTML for DevOps milestone presentation
Updated the title and content of the HTML page to reflect a personal milestone in DevOps. Enhanced styling and structure for better presentation.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Github action Pipeline</title>
+    <title>Emmanuel – DevOps Engineer | First CI/CD Deployment</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 40px;
+        background-color: #f7f7f7;
+        color: #333;
+      }
+      .container {
+        max-width: 700px;
+        margin: auto;
+        background: white;
+        padding: 30px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      }
+      h1 {
+        text-align: center;
+        color: #2c3e50;
+      }
+      h2 {
+        color: #1a73e8;
+      }
+      p {
+        line-height: 1.6;
+      }
+    </style>
   </head>
   <body>
-    <h1>Emmanuel's Simple Github action Pipeline</h1>
-    <p>This is a simple static web app.</p>
+    <div class="container">
+      <h1>Emmanuel – DevOps Engineer</h1>
+      <h2>My First Web App Deployed with GitHub Actions CI/CD</h2>
+      <p>
+        Today marks a major milestone in my DevOps journey. I successfully deployed this web
+        application using a fully automated GitHub Actions CI/CD pipeline.
+      </p>
+
+      <p>
+        From source code commit to automated testing, packaging, and deployment to my
+        server — everything happens seamlessly through CI/CD. This page is the live
+        result of that workflow.
+      </p>
+
+      <p>
+        This is only the beginning. More advanced pipelines, containerized deployments,
+        infrastructure automation, and cloud-native engineering coming soon.
+      </p>
+
+      <p><strong>Thank you for visiting!</strong></p>
+    </div>
   </body>
 </html>
