Update title in index.html to include 'sky'

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Emmanuel – DevOps Engineer | First CI/CD Deployment</title>
+    <title>Emmanuel (sky) DevOps Engineer | First CI/CD Deployment</title>
     <style>
       body {
         font-family: Arial, sans-serif;
