--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Emmanuel (sky) DevOps Engineer | First CI/CD Deployment</title>
+    <title>Emmanuel – DevOps Engineer | First CI/CD Deployment</title>
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Emmanuel – DevOps Engineer</h1>
+      <h1>Emmanuel(sly) DevOps Engineer</h1>
       <h2>My First Web App Deployed with GitHub Actions CI/CD</h2>
       <p>
         Today marks a major milestone in my DevOps journey. I successfully deployed this web
