Correct name from 'sly' to 'sky' in heading

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Emmanuel(sly) DevOps Engineer</h1>
+      <h1>Emmanuel (sky) DevOps Engineer</h1>
       <h2>My First Web App Deployed with GitHub Actions CI/CD</h2>
       <p>
         Today marks a major milestone in my DevOps journey. I successfully deployed this web
@@ -40,7 +40,7 @@
 
       <p>
         From source code commit to automated testing, packaging, and deployment to my
-        server — everything happens seamlessly through CI/CD. This page is the live
+        server, everything happens seamlessly through CI/CD. This page is the live
         result of that workflow.
       </p>
 
