Refine content in index.html for clarity
Updated text for clarity and added future plans.

--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
 
       <p>
         From source code commit to automated testing, packaging, and deployment to my
-        server, everything happens seamlessly through CI/CD. This page is the live
+        server — everything happens seamlessly through CI/CD. This page is the live
         result of that workflow.
       </p>
 
       <p>
         This is only the beginning. More advanced pipelines, containerized deployments,
-        infrastructure automation, and cloud-native engineering coming soon.
+        infrastructure automation, and cloud-native engineering are coming soon.
+        Next, I will be containerizing this app using Docker to make deployment faster,
+        scalable, and more consistent across environments.
       </p>
 
       <p><strong>Thank you for visiting!</strong></p>
