--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       <p>
         From source code commit to automated testing, packaging, and deployment to my
-        server — everything happens seamlessly through CI/CD. This page is the live
+        server, everything happens seamlessly through CI/CD. This page is the live
         result of that workflow.
       </p>
 
