Update header text in index.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Emmanuel (sky) DevOps Engineer</h1>
+      <h1>Emmanuel DevOps Engineer</h1>
       <h2>My First Web App Deployed with GitHub Actions CI/CD</h2>
       <p>
         Today marks a major milestone in my DevOps journey. I successfully deployed this web
